webhook/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  creationTimestamp: null
  labels:
    app: webhook
  name: webhook
spec:
  serviceName: "webhook"
  selector:
    matchLabels:
      app: webhook
  replicas: 2
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webhook
    spec:
      containers:
      - args:
        - php
        - artisan
        - queue:work
        - --daemon
        - --tries=3
        - --timeout=10
        image: fredsted/webhook.site
        name: webhook
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  creationTimestamp: null
  labels:
    app: laravel-echo-server
  name: laravel-echo-server
spec:
  serviceName: "laravel-echo-server"
  selector:
    matchLabels:
      app: laravel-echo-server
  replicas: 1
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: laravel-echo-server
    spec:
      containers:
      - env:
        - name: ECHO_ALLOW_CORS
          value: "true"
        - name: ECHO_ALLOW_HEADERS
          value: '*'
        - name: ECHO_ALLOW_METHODS
          value: '*'
        - name: ECHO_ALLOW_ORIGIN
          value: '*'
        - name: ECHO_PROTOCOL
          value: http
        - name: ECHO_REDIS_HOSTNAME
          value: redis-master.default.svc.cluster.local
        - name: ECHO_REDIS_PORT
          value: "6379"
        - name: LARAVEL_ECHO_SERVER_AUTH_HOST
          value: http://webhook
        - name: LARAVEL_ECHO_SERVER_HOST
          value: 0.0.0.0
        - name: LARAVEL_ECHO_SERVER_PORT
          value: "6001"
        image: mintopia/laravel-echo-server
        name: laravel-echo-server
        ports:
        - containerPort: 6001
        resources: {}
      restartPolicy: Always
