webhook/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: webhook
  name: webhook
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: webhook
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: laravel-echo-server
  name: laravel-echo-server
spec:
  ports:
  - name: "6001"
    port: 6001
    targetPort: 6001
  selector:
    app: laravel-echo-server
status:
  loadBalancer: {}
