webhook/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webhook
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: webhook.sudojoss.com
    http:
      paths:
        - backend:
            serviceName: webhook
            servicePort: 80
  tls: 
  - secretName: sudojoss-tls
    hosts:
    - webhook.sudojoss.com
